--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- o atributo target com o valor _blank, que diz que o link será aberto numa nova aba/janela-->
     <a href="lista_definicao.html" target="_blank"> Lista Definicao</a> <br>
     <a href="tabela.html">Tabelas</a> <br>
-    <a href="imagem_exemplo.html">Imagem Exemplo</a>
+    <a href="imagem_exemplo.html">Imagem Exemplo</a><br>
+    <a href="video.html">Imagem Exemplo</a> <br>
+    <a href="teste_estilo.html">Teste de Css </a>
 </body>
 </html>
